--- a/demo.html
+++ b/demo.html
@@ -37,7 +37,7 @@
         <div class="fixed">
             <h4>下拉框可选项为固定数据</h4>
             <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在页面渲染完函数中调用initSelect($('#fixedSelect'), true, null, getFixedSelected)，
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在页面渲染完调用initSelect($('#fixedSelect'), true, null, getFixedSelected)，
                 第一个参数为下拉框div的jQuery对象，第二个参数为可选项是否固定，此处传true，第三个参数为动态可选项数据json数组，此处传null，
                 第四个参数为修改选中值的回调函数<br/><br/>
 
